# substrate-node-template

genesis-output/: test-raw.json  test.json
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  test.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
